iptables.up.rules
# Generated by iptables-save v1.4.21 on Sat Jul 29 10:02:33 2017
*nat
:PREROUTING ACCEPT [594:34900]
:POSTROUTING ACCEPT [613:42488]
:OUTPUT ACCEPT [613:42488]
COMMIT
# Completed on Sat Jul 29 10:02:33 2017
# Generated by iptables-save v1.4.21 on Sat Jul 29 10:02:33 2017
*mangle
:PREROUTING ACCEPT [783464:1103635721]
:INPUT ACCEPT [783464:1103635721]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [435192:30006551]
:POSTROUTING ACCEPT [435192:30006551]
COMMIT
# Completed on Sat Jul 29 10:02:33 2017
# Generated by iptables-save v1.4.21 on Sat Jul 29 10:02:33 2017
*raw
:PREROUTING ACCEPT [783464:1103635721]
:OUTPUT ACCEPT [435192:30006551]
COMMIT
# Completed on Sat Jul 29 10:02:33 2017
# Generated by iptables-save v1.4.21 on Sat Jul 29 10:02:33 2017
*filter
:OUTPUT ACCEPT [0:0]
:syn-flood - [0:0]
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 22 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 80 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 21 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 20000:30000 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 443 --state NEW -j ACCEPT
-A INPUT -p tcp -m state -m tcp --dport 3306 --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp -m state --dport 8901:8999 --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp -m state --dport 1868:1878 --state NEW -j ACCEPT
-A INPUT -p tcp -m tcp -m state --dport 10000 --state NEW -j ACCEPT
-A INPUT -p icmp -m limit --limit 1/sec --limit-burst 10 -j ACCEPT
-A INPUT -m limit -f --limit 100/sec --limit-burst 100 -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j syn-flood
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A syn-flood -p tcp -m limit --limit 3/sec --limit-burst 6 -j RETURN
-A syn-flood -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Sat Jul 29 10:02:33 2017
